# vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: default_lit.frag  default_mesh.vert  pbr.frag  static.frag  textured_lit.frag  triangle.frag  triangle.vert  triangle_colored.frag  triangle_colored.vert  triangle_mesh.vert
src/: CMakeLists.txt  camera.cpp  camera.h  main.cpp
src/vk/: check.h  common.h  descriptor.cpp  descriptor.h  entity.cpp  entity.h  info.cpp  info.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  object.cpp  object.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  texture.cpp  texture.h  types.h  utils.cpp  utils.h  vertex.cpp  vertex.h  vk_check.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  vk_types.h
src/vk/init/: descriptor.cpp  descriptor.h  info.cpp  info.h  pipeline.cpp  pipeline.h
